<resources>
    <string name="app_name">SoftGroupAndroid</string>
    <string name="login">Sign in</string>
    <string name="register">Sign up</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Invalid password</string>
    <string name="logout">Logout</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="hint_email">Enter email</string>
    <string name="hint_password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="hint_confirm_password">Enter password again</string>
    <string name="error">Error</string>
    <string name="err_short_password">Password must be at least 4 characters</string>
    <string name="err_short_email">Email must be at least 6 characters</string>
    <string name="err_pass_not_equals">Passwords do not match</string>
    <string name="err_user_exists">User with this email already exists</string>
    <string name="successful_registration">Successful registration</string>
    <string name="my_account">My account</string>
    <string name="not_valid_email">Not valid email</string>
    <string name="title_account_deleting">Account deleting</string>
    <string name="really_delete">Do you really want delete %s?</string>
    <string name="tittle_users_list">Accounts list</string>
    <string name="hint_first_name">Enter first name</string>
    <string name="hint_last_name">Enter last name</string>
    <string name="hint_middle_name">Enter middle name</string>
    <string name="hint_nickname">Enter nickname</string>
    <string name="hint_phone_number">Enter phone number</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="middle_name">Middle name</string>
    <string name="nickname">Nickname</string>
    <string name="phone_number">Phone number</string>
    <string name="save">Save</string>
    <string name="title_account_info">Account info</string>
    <string name="title_edit_account">Edit account</string>
    <string name="ban_info_user">Banned to: %1$s\nReason: %2$s</string>
    <string name="ban_info_admin">Ban to: %1$s\n%2$s</string>
    <string name="ban_reason">Ban reason</string>
    <string name="not_banned">Not banned</string>
    <string name="incorrect_date">Incorrect date</string>
    <string name="user_photo">User photo</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_place_info">Place info</string>
    <string name="title_activity_select_point_on_map">Select point</string>
    <string name="place_title">Title</string>
    <string name="place_description">Description</string>
    <string name="place_select_image">Select image</string>
    <string name="place_select_map">Select in map</string>
    <string name="add_place">Add place</string>
    <string name="my_places">My places</string>
    <string name="select_place">Select place</string>
    <string name="weather_wind">Wind: %s m/s</string>
    <string name="weather_clouds">Clouds: %s%%</string>
    <string name="weather_temp">Temp: %s °C</string>
</resources>
