<?xml version="1.0" encoding="utf-8"?>
<layout>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="ua.sg.academy.havrulenko.android.ui.EditUserDataActivity"
        tools:ignore="RtlHardcoded">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/MyTextView"
                android:text="@string/first_name"/>

            <EditText
                android:id="@+id/editTextFirstName"
                style="@style/MyEditText"
                android:hint="@string/hint_first_name"
                android:inputType="textPersonName"/>

            <TextView
                style="@style/MyTextView"
                android:text="@string/last_name"/>

            <EditText
                android:id="@+id/editTextLastName"
                style="@style/MyEditText"
                android:hint="@string/hint_last_name"
                android:inputType="textPersonName"/>

            <TextView
                style="@style/MyTextView"
                android:text="@string/middle_name"/>

            <EditText
                android:id="@+id/editTextMiddleName"
                style="@style/MyEditText"
                android:hint="@string/hint_middle_name"
                android:inputType="textPersonName"/>

            <TextView
                style="@style/MyTextView"
                android:text="@string/nickname"/>

            <EditText
                android:id="@+id/editTextNickname"
                style="@style/MyEditText"
                android:hint="@string/hint_nickname"
                android:inputType="textPersonName"/>

            <TextView
                style="@style/MyTextView"
                android:text="@string/phone_number"/>

            <EditText
                android:id="@+id/editTextPhoneNumber"
                style="@style/MyEditText"
                android:hint="@string/hint_phone_number"
                android:inputType="phone"/>

            <Button
                android:id="@+id/buttonSave"
                style="@style/RedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save" />

        </LinearLayout>
    </ScrollView>
</layout>
